--- a/TODO-List/Base.lproj/Main.storyboard
+++ b/TODO-List/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -32,11 +33,81 @@
                             <outlet property="delegate" destination="Sh5-hs-jqP" id="bEz-bb-0Xh"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="ToDo List" id="kTZ-5K-uWn"/>
+                    <navigationItem key="navigationItem" title="ToDo List" id="kTZ-5K-uWn">
+                        <barButtonItem key="backBarButtonItem" title="List" id="EtU-qH-q12"/>
+                        <barButtonItem key="rightBarButtonItem" title="Item" systemItem="add" id="I2W-Pm-THk">
+                            <connections>
+                                <segue destination="WOz-In-Itc" kind="show" identifier="addToDo" id="9Jd-z5-rwk"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zex-wE-QdT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="753" y="82"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="kiS-lF-pX8">
+            <objects>
+                <viewController id="WOz-In-Itc" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="F9z-JM-yNy">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="To Do:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ggp-zg-moe">
+                                <rect key="frame" x="149.66666666666666" y="85" width="114.99999999999997" height="46.666666666666657"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="40"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Buy Milk" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6yv-1N-UI7">
+                                <rect key="frame" x="50" y="154.66666666666666" width="314" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="FhU-lb-DlT">
+                                <rect key="frame" x="182.66666666666666" y="268" width="51" height="31"/>
+                            </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="752" text="Important : " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HRe-7X-w4e">
+                                <rect key="frame" x="122.66666666666669" y="218" width="169" height="42"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Czv-RQ-qe0">
+                                <rect key="frame" x="177" y="356" width="60" height="50"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="32"/>
+                                <state key="normal" title="Add"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="6yv-1N-UI7" firstAttribute="top" secondItem="ggp-zg-moe" secondAttribute="bottom" constant="23" id="3He-fz-waK"/>
+                            <constraint firstItem="ggp-zg-moe" firstAttribute="top" secondItem="k4A-5N-4or" secondAttribute="top" constant="21" id="3mG-TA-J9S"/>
+                            <constraint firstItem="HRe-7X-w4e" firstAttribute="centerX" secondItem="F9z-JM-yNy" secondAttribute="centerX" id="3zU-E6-GsI"/>
+                            <constraint firstItem="k4A-5N-4or" firstAttribute="trailing" secondItem="6yv-1N-UI7" secondAttribute="trailing" constant="50" id="4cX-rb-lIp"/>
+                            <constraint firstItem="Czv-RQ-qe0" firstAttribute="centerX" secondItem="HRe-7X-w4e" secondAttribute="centerX" id="5eh-Yb-xwd"/>
+                            <constraint firstItem="FhU-lb-DlT" firstAttribute="centerX" secondItem="F9z-JM-yNy" secondAttribute="centerX" id="GIA-LF-IS3"/>
+                            <constraint firstItem="Czv-RQ-qe0" firstAttribute="centerX" secondItem="F9z-JM-yNy" secondAttribute="centerX" id="JmV-D4-yL9"/>
+                            <constraint firstItem="Czv-RQ-qe0" firstAttribute="leading" secondItem="k4A-5N-4or" secondAttribute="leading" constant="177" id="Pol-PR-PBP"/>
+                            <constraint firstItem="HRe-7X-w4e" firstAttribute="centerX" secondItem="F9z-JM-yNy" secondAttribute="centerX" id="SrW-3h-w5O"/>
+                            <constraint firstItem="FhU-lb-DlT" firstAttribute="top" secondItem="HRe-7X-w4e" secondAttribute="bottom" constant="8" id="V9n-ah-on5"/>
+                            <constraint firstItem="k4A-5N-4or" firstAttribute="bottom" secondItem="Czv-RQ-qe0" secondAttribute="bottom" constant="330" id="VDC-Ev-om1"/>
+                            <constraint firstItem="Czv-RQ-qe0" firstAttribute="top" secondItem="FhU-lb-DlT" secondAttribute="bottom" constant="57" id="bPN-EF-M26"/>
+                            <constraint firstItem="ggp-zg-moe" firstAttribute="centerX" secondItem="F9z-JM-yNy" secondAttribute="centerX" id="dIs-yG-nXZ"/>
+                            <constraint firstItem="6yv-1N-UI7" firstAttribute="centerX" secondItem="F9z-JM-yNy" secondAttribute="centerX" id="etX-J6-2ye"/>
+                            <constraint firstItem="6yv-1N-UI7" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="k4A-5N-4or" secondAttribute="leading" id="fkl-Us-3iG"/>
+                            <constraint firstItem="HRe-7X-w4e" firstAttribute="top" secondItem="6yv-1N-UI7" secondAttribute="bottom" constant="33.333333333333343" id="fmo-ux-y3k"/>
+                            <constraint firstItem="6yv-1N-UI7" firstAttribute="centerX" secondItem="F9z-JM-yNy" secondAttribute="centerX" id="lXu-nK-61M"/>
+                            <constraint firstItem="ggp-zg-moe" firstAttribute="centerX" secondItem="F9z-JM-yNy" secondAttribute="centerX" id="yIy-N9-rET"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="k4A-5N-4or"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="URv-ox-4Ke" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1536.2318840579712" y="78.260869565217391"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="jl1-BG-0Pa">
