--- a/TODO-List/View/Base.lproj/Main.storyboard
+++ b/TODO-List/View/Base.lproj/Main.storyboard
@@ -136,10 +136,10 @@
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="43"/>
                                 <state key="normal" title="Complete"/>
                                 <connections>
-                                    <action selector="completeToDO:" destination="058-aO-fOH" eventType="touchUpInside" id="Pob-kW-zZv"/>
+                                    <action selector="completeToDo:" destination="058-aO-fOH" eventType="touchUpInside" id="Pob-kW-zZv"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kdG-tW-eEz">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kdG-tW-eEz">
                                 <rect key="frame" x="20" y="155" width="374" height="41"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="35"/>
                                 <nil key="textColor"/>
